// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select matches snapshot for errorText: errorText mount 1`] = `
.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
}

.emotion-14:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-14 {
    max-width: 960px;
  }
}

.emotion-5 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #6f777b;
}

@media only screen and (min-width:641px) {
  .emotion-5 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-9 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #b10e1e;
  padding-top: 4px;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-9 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-12 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  height: 33px;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 4px solid #b10e1e;
}

@media only screen and (min-width:641px) {
  .emotion-12 {
    width: 50%;
    height: 38px;
    font-size: 19px;
    line-height: 1.31579;
  }
}

.emotion-12 [disabled] {
  cursor: auto;
}

.emotion-12:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.glamor-13,
[data-glamor-13] {
  margin-bottom: 20px;
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-13,
  [data-glamor-13] {
    margin-bottom: 30px;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(Select)
  errorText="example"
  hint="example"
  label="example"
  meta={
    Object {
      "error": "example",
      "touched": true,
    }
  }
>
  <Select
    className="glamor-13"
    errorText="example"
    hint="example"
    input={Object {}}
    label="example"
    meta={
      Object {
        "error": "example",
        "touched": true,
      }
    }
  >
    <glamorous(Label)
      className="glamor-13"
      error="example"
    >
      <Label
        className="glamor-13"
        error="example"
      >
        <Styled(label)
          className="glamor-13"
          error="example"
        >
          <label
            className="glamor-13 glamor-14"
          >
            <glamorous(LabelText)>
              <LabelText
                className="glamor-0"
              >
                <Styled(span)
                  className="glamor-0"
                >
                  <span
                    className="glamor-0 glamor-1"
                  >
                    example
                  </span>
                </Styled(span)>
              </LabelText>
            </glamorous(LabelText)>
            <glamorous(HintText)>
              <HintText
                className="glamor-0"
              >
                <Styled(span)
                  className="glamor-0"
                >
                  <span
                    className="glamor-0 glamor-5"
                  >
                    example
                  </span>
                </Styled(span)>
              </HintText>
            </glamorous(HintText)>
            <glamorous(ErrorText)>
              <ErrorText
                className="glamor-0"
              >
                <Styled(span)
                  className="glamor-0"
                >
                  <span
                    className="glamor-0 glamor-9"
                  >
                    example
                  </span>
                </Styled(span)>
              </ErrorText>
            </glamorous(ErrorText)>
            <Styled(select)
              error="example"
            >
              <select
                className="glamor-12"
              >
                example
              </select>
            </Styled(select)>
          </label>
        </Styled(label)>
      </Label>
    </glamorous(Label)>
  </Select>
</glamorous(Select)>
`;

exports[`Select matches snapshot: enzyme.mount 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
}

.emotion-6:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-6 {
    max-width: 960px;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-4 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  height: 33px;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-4 {
    width: 50%;
    height: 38px;
    font-size: 19px;
    line-height: 1.31579;
  }
}

.emotion-4 [disabled] {
  cursor: auto;
}

.emotion-4:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.glamor-5,
[data-glamor-5] {
  margin-bottom: 20px;
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-5,
  [data-glamor-5] {
    margin-bottom: 30px;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(Select)
  label="example"
>
  <Select
    className="glamor-5"
    input={Object {}}
    label="example"
    meta={Object {}}
  >
    <glamorous(Label)
      className="glamor-5"
    >
      <Label
        className="glamor-5"
      >
        <Styled(label)
          className="glamor-5"
        >
          <label
            className="glamor-5 glamor-6"
          >
            <glamorous(LabelText)>
              <LabelText
                className="glamor-0"
              >
                <Styled(span)
                  className="glamor-0"
                >
                  <span
                    className="glamor-0 glamor-1"
                  >
                    example
                  </span>
                </Styled(span)>
              </LabelText>
            </glamorous(LabelText)>
            <Styled(select)>
              <select
                className="glamor-4"
              >
                example
              </select>
            </Styled(select)>
          </label>
        </Styled(label)>
      </Label>
    </glamorous(Label)>
  </Select>
</glamorous(Select)>
`;
